--- a/src/components/common/Navbar.css
+++ b/src/components/common/Navbar.css
@@ -2,24 +2,14 @@
 .header-wrapper {
   position: sticky;
   top: 0;
-  z-index: 5000;
-  background: #fff;
+  z-index: 9999;
 }
-
-.sticky-header {
-  position: sticky;
-  top: 0;
-  z-index: 5000;
-  background: #fff;
-}
-
 
 
 .top-infobar {
   background: #fff;
   color: #000;
   padding: 4px 0;
-  top: 0;
   z-index: 1100;
   transition: all 0.4s ease-in-out;
   height: 70px;
@@ -99,7 +89,8 @@
   border: none !important;
   margin: 0 !important;
   box-shadow: none !important;
-  top: 0;
+
+
   z-index: 1200;
   transition: top 0.4s ease-in-out;
 }
@@ -302,9 +293,9 @@
 }
 
 /* BODY SCROLL PADDING */
-body {
+/* body {
   scroll-padding-top: 135px;
-}
+} */
 
 
 
@@ -378,6 +369,33 @@ body {
   .top-infobar .right-info {
     justify-content: center !important;
     text-align: center !important;
+  }
+}
+
+
+
+/* MOBILE + TABLET < 992px -> NOT Sticky */
+@media (max-width: 991px) {
+  .header-wrapper {
+    position: static !important;
+  }
+}
+
+/* Desktop sticky (>=992px) */
+@media (min-width: 992px) {
+
+  /* Infobar always sticky at top */
+  .top-infobar {
+    position: sticky !important;
+    top: 0;
+    z-index: 4000;
+  }
+
+  /* Navbar sticks exactly below Infobar */
+  .main-navbar {
+    position: sticky !important;
+    top: 70px; /* Height of infobar */
+    z-index: 3500;
   }
 }
 
