--- a/src/components/home/WorkPlatforms.css
+++ b/src/components/home/WorkPlatforms.css
@@ -4,22 +4,22 @@
   padding: 40px 10px;
   display: flex;
   justify-content: center;
-}
+} 
 
 /* MAIN BOX */
 .work-platform-section .work-platform-box {
   background: #fff;
   border-radius: 8px;
-  padding: 30px 10px;
-  width: 90%;
-  max-width: 1100px;
+  padding: 30px 10px !important;
+  width: 100%;
+  max-width: 1400px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
 /* TITLE */
 .work-platform-section .work-platform-title {
   text-align: center;
-  font-size: 34px;
+  font-size: 36px;
   font-weight: 700;
   margin-bottom: 45px;
 }
@@ -29,7 +29,7 @@
   display: grid;
   grid-template-columns: 57% 1px 30%;
   align-items: center;
-  gap: 35px;
+  gap: 30px;
 }
 
 /* LEFT */
@@ -41,11 +41,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 40px !important;
-  grid-column-gap: 10px !important;
+  grid-column-gap: 0 !important;
   justify-items: center;
   align-items: center;
   width: 100%;
-  padding-left: 35px;
+  /* padding-left: 35px; */
 }
 
 .work-platform-section .full-row {
@@ -76,16 +76,17 @@
   height: 290px;
   background: #000;
   margin: auto;
-  margin-left:-20px !important;
+  margin-left:-30px !important;
 }
 
 /* RIGHT TEXT */
 .work-platform-section .right-text {
-  font-size: 20px;
+  font-size: 22px;
   color: #000;
-  line-height: 1.6;
-  margin-left: 25px;
-  margin: 0 10px;
+  line-height: 1.5;
+  padding-left: 20px;
+  margin: 0;
+  
 }
 
 .work-platform-section .right-text p {
