--- a/src/css/about.css
+++ b/src/css/about.css
@@ -81,12 +81,13 @@
   align-items: center;
   color: black;
   font-family: "Outfit", sans-serif !important;
-  font-size: 26px !important;
+  font-size: 24px !important;
   line-height: 1.5;
   letter-spacing: 0.01em;
   margin: 0 auto;
   font-weight: 00 !important;
   gap: 20px;
+  margin-top: 20px;
 }
 
 
@@ -204,6 +205,10 @@
 
 
 @media (max-width: 480px) {
+
+    
+
+
   .about_card_para {
     font-size: 22px !important;
     /* Smaller font size for mobiles */
@@ -224,17 +229,20 @@
     padding: 20px !important;
   }
 
-  .number_about_page {
-    font-size: 60px !important;
-  }
+  
   .backcol2_color{
-     font-size: 60px !important;
+     font-size: 40px !important;
   }
+
+  .paraAbout1 {
+    text-align: start;
+    justify-content: start;
+  }
+
 }
 
 
-
-
+.abt
 
 .content_card1 {
   padding: 30px;
@@ -264,13 +272,14 @@
 }
 
 .background_color_aboutus_name {
-  padding: 4px;
+  padding: 6px;
   background-color: #FFC422;
   border-radius: 8px;
   text-align: center;
   width: 140px;
   justify-content: center;
   padding-bottom: 1px;
+  margin-bottom: 10px;
 }
 
 
@@ -278,25 +287,28 @@
 
   color: #8a8a8a;
   font-family: "Outfit", sans-serif;
-  font-size: 20px;
+  font-size: 22px;
   line-height: 1.5;
   letter-spacing: 0.01em;
   margin: 0 auto;
   font-weight: 400;
 }
 
-
+ .abt {
+  margin-top: 60px;
+  margin-bottom: 70px;
+ }
 
 .engineer-box {
   display: flex;
   align-items: center;
-  gap: 28px;
+  gap: 26px;
 
 }
 
 .icon {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -315,7 +327,7 @@
 }
 
 .number {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 600;
   color: #142382;
   margin-bottom: -4px;
